# MyStore

./: comandos.txt  package-lock.json
FrontEnd/Estilos/: Footer.css  Header.css  Ingreso.css  Registro.css
FrontEnd/src/vistas/: PQRSPage.jsx
FrontEnd/vistas/: RegistroVendedor.js
backend/: alembic.ini  pyproject.toml  requirements.txt
backend/app/: config.py  main.py  schema.py
backend/app/controller/: authentication.py  users.py
backend/app/model/: __init__.py  carrito_compra.py  carrito_compras.py  compra.py  comprador.py  devolucion.py  envio.py  lista_deseos.py  mixins.py  plantilla.py  producto.py  suscripcion.py  tienda.py  usuario.py  vendedor.py  venta.py
backend/app/repository/: auth_repo.py  carrito_compras.py  compra.py  comprador.py  devolucion.py  envio.py  lista_deseos.py  plantilla.py  producto.py  suscripcion.py  tienda.py  usuario.py  vendedor.py  venta.py
backend/app/rutas/: carrito.py  compra.py  comprador.py  devolucion.py  envio.py  lista_deseos.py  plantilla.py  producto.py  suscripcion.py  tienda.py  usuario.py  vendedor.py  venta.py
backend/app/service/: auth_service.py  usuario.py
backend/migrations/versions/: 986e20fbd400_initial_migration.py
frontend/: package-lock.json  package.json  tailwind.config.js
frontend/src/: App.js  Home.js  index.css  index.js
frontend/src/Estilos/: Galeria.css  Ingreso.css  Registro.css
frontend/src/components/: CrearUsuario.js  LeerUsuario.js  UserForm.js
frontend/src/form/: Login.js  Register.js  forgot.js
frontend/src/partes/: Footer.js  Header.js  VentanaEmergente.js
(+6 files in other folders)
